Update Cum invatam la fizica.ipynb

--- a/Cum invatam la fizica.ipynb
+++ b/Cum invatam la fizica.ipynb
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Acest material este destinatut tuturor celor cu adevărat dornici de învăța fizica și a fost inspirat de Paul Dawkins, <a href=\"http://tutorial.math.lamar.edu\">Paul’s Online Maths notes</a>.</i>"
+    "<i>Acest material a fost inspirat de Paul Dawkins, <a href=\"http://tutorial.math.lamar.edu\">Paul’s Online Maths notes</a>.</i>"
    ]
   }
  ],
