--- a/Vectori.ipynb
+++ b/Vectori.ipynb
@@ -393,14 +393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$d_{1x}=d_1 cos⁡50=92∙0,642 km=59 km$"
+    "$d_{1x}=d_1 cos⁡50=92\\cdot0,642 km=59 km$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$d_{1y}=d_1  sin⁡50=92∙0,766 km=70,4 km$"
+    "$d_{1y}=d_1  sin⁡50=92\\0,766 km=70,4 km$"
    ]
   },
   {
