--- a/Viteza.ipynb
+++ b/Viteza.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\vec{v_m}= \\frac{∆\\vec{r}}{∆t}=\\frac{\\vec{r}-\\vec{r_0}}{t - t_0}$ $[\\frac{m}{s}]$"
+    "$\\vec{v_m}= \\frac{\Delta\\vec{r}}{\Deltat}=\\frac{\\vec{r}-\\vec{r_0}}{t - t_0}$ $[\\frac{m}{s}]$"
    ]
   },
   {
